--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="header-1">
 
-        <a href="#" class="logo"> <i class="fas fa-book"></i> bookly </a>
+        <a href="#" class="logo"> كتابي  <i class="fas fa-book"></i></a>
 
         <form action="" class="search-form">
             <input type="search" name="" placeholder="search here..." id="search-box">
