--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,7 +23,7 @@
 
     <div class="header-1">
 
-        <a href="#" class="logo"> كتابي  <i class="fas fa-book"></i></a>
+        <a href="#" class="logo"> كتابي <i class="fas fa-book"></i> </a>
 
         <form action="" class="search-form">
             <input type="search" name="" placeholder="search here..." id="search-box">
