--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="#" class="logo"> كتابي <i class="fas fa-book"></i> </a>
 
         <form action="" class="search-form">
-            <input type="search" name="" placeholder="search here..." id="search-box">
+            <input type="search" name="" placeholder="إبحث هنا..." id="search-box">
             <label for="search-box" class="fas fa-search"></label>
         </form>
 
@@ -41,11 +41,11 @@
 
     <div class="header-2">
         <nav class="navbar">
-            <a href="#home">home</a>
-            <a href="#featured">featured</a>
-            <a href="#arrivals">arrivals</a>
-            <a href="#reviews">reviews</a>
-            <a href="#blogs">blogs</a>
+            <a href="#home">الرئيسية</a>
+            <a href="#featured">المميزات</a>
+            <a href="#arrivals">الحديثة</a>
+            <a href="#reviews">مراجعات</a>
+            <a href="#blogs">مقالات</a>
         </nav>
     </div>
 
@@ -70,18 +70,18 @@
     <div id="close-login-btn" class="fas fa-times"></div>
 
     <form action="">
-        <h3>sign in</h3>
-        <span>username</span>
-        <input type="email" name="" class="box" placeholder="enter your email" id="">
-        <span>password</span>
-        <input type="password" name="" class="box" placeholder="enter your password" id="">
+        <h3>تسجيل الدخول</h3>
+        <span>إسم المستخدم</span>
+        <input type="email" name="" class="box" placeholder="أدخل البريد الإلكتروني" id="">
+        <span>كلمة السر</span>
+        <input type="password" name="" class="box" placeholder="أدخل كلمة السر" id="">
         <div class="checkbox">
             <input type="checkbox" name="" id="remember-me">
-            <label for="remember-me"> remember me</label>
+            <label for="remember-me"> تذكرني </label>
         </div>
-        <input type="submit" value="sign in" class="btn">
-        <p>forget password ? <a href="#">click here</a></p>
-        <p>don't have an account ? <a href="#">create one</a></p>
+        <input type="submit" value="تسجيل الدخول" class="btn">
+        <p>نسيا كلمة السر ؟<a href="#">إضغض هنا</a></p>
+        <p>ليس لديك حساب ؟ <a href="#">أحصل على واحد</a></p>
     </form>
 
 </div>
