--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
     <div class="row">
 
         <div class="content">
-            <h3>upto 75% off</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam deserunt nostrum accusamus. Nam alias sit necessitatibus, aliquid ex minima at!</p>
-            <a href="#" class="btn">shop now</a>
+            <h3> تخفيض حتى %70 </h3>
+            <p>أحصل على تخفيضات حصرية من مكتبة كتابي مع كتب جديدة و حصرية لأول مرة </p>
+            <a href="#" class="btn"> تسوق لآن </a>
         </div>
 
         <div class="swiper books-slider">
@@ -123,32 +123,32 @@
     <div class="icons">
         <i class="fas fa-shipping-fast"></i>
         <div class="content">
-            <h3>free shipping</h3>
-            <p>order over $100</p>
+            <h3> توصيل مجاني </h3>
+            <p>طلبية أعلى من 100$</p>
         </div>
     </div>
 
     <div class="icons">
         <i class="fas fa-lock"></i>
         <div class="content">
-            <h3>secure payment</h3>
-            <p>100 secure payment</p>
+            <h3> دفع آمن </h3>
+            <p> حماية مشفرة للعملاء </p>
         </div>
     </div>
 
     <div class="icons">
         <i class="fas fa-redo-alt"></i>
         <div class="content">
-            <h3>easy returns</h3>
-            <p>10 days returns</p>
+            <h3> سهولة لإرجاع </h3>
+            <p> إرجاع نقود فوري  </p>
         </div>
     </div>
 
     <div class="icons">
         <i class="fas fa-headset"></i>
         <div class="content">
-            <h3>24/7 support</h3>
-            <p>call us anytime</p>
+            <h3> خدمة عملاء24/7 </h3>
+            <p> إتصل بنا أي وقت </p>
         </div>
     </div>
 
@@ -160,7 +160,7 @@
 
 <section class="featured" id="featured">
 
-    <h1 class="heading"> <span>featured books</span> </h1>
+    <h1 class="heading"> <span> كتب مميزة </span> </h1>
 
     <div class="swiper featured-slider">
 
@@ -176,9 +176,9 @@
                     <img src="image/book-1.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>featured books</h3>
+                    <h3> كتب مميزة  </h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <a href="#" class="btn"> أضف للسلة </a>
                 </div>
             </div>
 
@@ -192,9 +192,9 @@
                     <img src="image/book-2.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>featured books</h3>
+                    <h3> كتب مميزة  </h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <a href="#" class="btn">أضف للسلة</a>
                 </div>
             </div>
 
@@ -208,9 +208,9 @@
                     <img src="image/book-3.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>featured books</h3>
+                    <h3> كتب مميزة  </h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <a href="#" class="btn">أضف للسلة</a>
                 </div>
             </div>
 
@@ -224,9 +224,9 @@
                     <img src="image/book-4.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>featured books</h3>
+                    <h3>كتب مميزة </h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <a href="#" class="btn">أضف للسلة</a>
                 </div>
             </div>
 
@@ -240,9 +240,9 @@
                     <img src="image/book-5.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>featured books</h3>
+                    <h3>كتب مميزة </h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <a href="#" class="btn">أضف للسلة</a>
                 </div>
             </div>
 
@@ -256,9 +256,9 @@
                     <img src="image/book-6.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>featured books</h3>
+                    <h3>كتب مميزة </h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <a href="#" class="btn">أضف للسلة</a>
                 </div>
             </div>
 
@@ -272,9 +272,9 @@
                     <img src="image/book-7.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>featured books</h3>
+                    <h3>كتب مميزة </h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <a href="#" class="btn">أضف للسلة</a>
                 </div>
             </div>
 
@@ -288,9 +288,9 @@
                     <img src="image/book-8.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>featured books</h3>
+                    <h3>كتب مميزة </h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <a href="#" class="btn">أضف للسلة</a>
                 </div>
             </div>
 
@@ -304,9 +304,9 @@
                     <img src="image/book-9.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>featured books</h3>
+                    <h3>كتب مميزة </h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <a href="#" class="btn">أضف للسلة</a>
                 </div>
             </div>
 
@@ -320,9 +320,9 @@
                     <img src="image/book-10.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>featured books</h3>
+                    <h3>كتب مميزة </h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
-                    <a href="#" class="btn">add to cart</a>
+                    <a href="#" class="btn">أضف للسلة</a>
                 </div>
             </div>
 
@@ -342,9 +342,9 @@
 <section class="newsletter">
 
     <form action="">
-        <h3>subscribe for latest updates</h3>
-        <input type="email" name="" placeholder="enter your email" id="" class="box">
-        <input type="submit" value="subscribe" class="btn">
+        <h3> إشترك لتصلك إشعارات با كتبنا الجديدة </h3>
+        <input type="email" name="" placeholder="أدخل بريدك الإلكتروني" id="" class="box">
+        <input type="submit" value="إشترك الآن" class="btn">
     </form>
 
 </section>
@@ -355,7 +355,7 @@
 
 <section class="arrivals" id="arrivals">
 
-    <h1 class="heading"> <span>new arrivals</span> </h1>
+    <h1 class="heading"> <span>كتب جديدة</span> </h1>
 
     <div class="swiper arrivals-slider">
 
@@ -366,7 +366,7 @@
                     <img src="image/book-1.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
+                    <h3>كتب جديدة</h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -383,7 +383,7 @@
                     <img src="image/book-2.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
+                    <h3>كتب جديدة</h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -400,7 +400,7 @@
                     <img src="image/book-3.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
+                    <h3>كتب جديدة</h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -417,7 +417,7 @@
                     <img src="image/book-4.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
+                    <h3>كتب جديدة</h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -434,7 +434,7 @@
                     <img src="image/book-5.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
+                    <h3>كتب جديدة</h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -459,7 +459,7 @@
                     <img src="image/book-6.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
+                    <h3>كتب جديدة</h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -476,7 +476,7 @@
                     <img src="image/book-7.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
+                    <h3>كتب جديدة</h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -493,7 +493,7 @@
                     <img src="image/book-8.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
+                    <h3>كتب جديدة</h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -510,7 +510,7 @@
                     <img src="image/book-9.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
+                    <h3>كتب جديدة</h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -527,7 +527,7 @@
                     <img src="image/book-10.png" alt="">
                 </div>
                 <div class="content">
-                    <h3>new arrivals</h3>
+                    <h3>كتب جديدة</h3>
                     <div class="price">$15.99 <span>$20.99</span></div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -665,7 +665,7 @@
 
 <section class="blogs" id="blogs">
 
-    <h1 class="heading"> <span>our blogs</span> </h1>
+    <h1 class="heading"> <span> المقالات </span> </h1>
 
     <div class="swiper blogs-slider">
 
@@ -676,9 +676,9 @@
                     <img src="image/blog-1.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>blog title goes here</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
-                    <a href="#" class="btn">read more</a>
+                    <h3>عنوان المقالة هنا</h3>
+                    <p> ضع وصفا مناسبا لمقالك إحرص على أن يكون الوصف جذابا</p>
+                    <a href="#" class="btn">قراءة المزيد...</a>
                 </div>
             </div>
 
@@ -687,9 +687,9 @@
                     <img src="image/blog-2.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>blog title goes here</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
-                    <a href="#" class="btn">read more</a>
+                    <h3>عنوان المقالة هنا</h3>
+                    <p> ضع وصفا مناسبا لمقالك إحرص على أن يكون الوصف جذابا</p>
+                    <a href="#" class="btn">قراءة المزيد...</a>
                 </div>
             </div>
 
@@ -698,9 +698,9 @@
                     <img src="image/blog-3.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>blog title goes here</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
-                    <a href="#" class="btn">read more</a>
+                    <h3>عنوان المقالة هنا</h3>
+                    <p> ضع وصفا مناسبا لمقالك إحرص على أن يكون الوصف جذابا</p>
+                    <a href="#" class="btn">قراءة المزيد...</a>
                 </div>
             </div>
 
@@ -709,9 +709,9 @@
                     <img src="image/blog-4.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>blog title goes here</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
-                    <a href="#" class="btn">read more</a>
+                    <h3>عنوان المقالة هنا</h3>
+                    <p> ضع وصفا مناسبا لمقالك إحرص على أن يكون الوصف جذابا</p>
+                    <a href="#" class="btn">قراءة المزيد...</a>
                 </div>
             </div>
 
@@ -720,9 +720,9 @@
                     <img src="image/blog-5.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>blog title goes here</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, odio.</p>
-                    <a href="#" class="btn">read more</a>
+                    <h3>عنوان المقالة هنا</h3>
+                    <p> ضع وصفا مناسبا لمقالك إحرص على أن يكون الوصف جذابا</p>
+                    <a href="#" class="btn">قراءة المزيد...</a>
                 </div>
             </div>
 
