--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <div class="content">
             <h3> تخفيض حتى %70 </h3>
-            <p>أحصل على تخفيضات حصرية من مكتبة كتابي مع كتب جديدة و حصرية لأول مرة </p>
+            <p>أحصل على تخفيضات حصرية من مكتبة <span>كتابي</span> مع كتب جديدة و حصرية لأول مرة </p>
             <a href="#" class="btn"> تسوق لآن </a>
         </div>
 
@@ -552,10 +552,10 @@
 <section class="deal">
 
     <div class="content">
-        <h3>deal of the day</h3>
-        <h1>upto 50% off</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde perspiciatis in atque dolore tempora quaerat at fuga dolorum natus velit.</p>
-        <a href="#" class="btn">shop now</a>
+        <h3> عرض اليوم </h3>
+        <h1> خصم 50% </h1>
+        <p> لاتفوت الفرصة العرض لساعات محدودة سارع قبل إنتهاء العرض </p>
+        <a href="#" class="btn"> تسوق الآن </a>
     </div>
 
     <div class="image">
