--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 
 <section class="reviews" id="reviews">
 
-    <h1 class="heading"> <span>client's reviews</span> </h1>
+    <h1 class="heading"> <span> مراجعات العملاء </span> </h1>
 
     <div class="swiper reviews-slider">
 
@@ -578,8 +578,8 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-1.png" alt="">
-                <h3>john deo</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                <h3>مستخدم جديد</h3>
+                <p>من أروع المكتبات التي جربتها </p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -591,8 +591,8 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-2.png" alt="">
-                <h3>john deo</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                <h3>مستخدم جديد</h3>
+                <p>من أروع المكتبات التي جربتها </p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -604,8 +604,8 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-3.png" alt="">
-                <h3>john deo</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                <h3>مستخدم جديد</h3>
+                <p>من أروع المكتبات التي جربتها </p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -616,8 +616,8 @@
             </div>
             <div class="swiper-slide box">
                 <img src="image/pic-4.png" alt="">
-                <h3>john deo</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                <h3>مستخدم جديد</h3>
+                <p>من أروع المكتبات التي جربتها </p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -629,8 +629,8 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-5.png" alt="">
-                <h3>john deo</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                <h3>مستخدم جديد</h3>
+                <p>من أروع المكتبات التي جربتها </p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -642,8 +642,8 @@
 
             <div class="swiper-slide box">
                 <img src="image/pic-6.png" alt="">
-                <h3>john deo</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur nihil ipsa placeat. Aperiam at sint, eos ex similique facere hic.</p>
+                <h3>مستخدم جديد</h3>
+                <p>من أروع المكتبات التي جربتها </p>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -741,38 +741,36 @@
     <div class="box-container">
 
         <div class="box">
-            <h3>our locations</h3>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> india </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> USA </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> russia </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> france </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> japan </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> africa </a>
+            <h3> مواقعنا </h3>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> BMD </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> الحي الإداري </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> توجنين </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> دار الفكر </a>
         </div>
 
         <div class="box">
-            <h3>quick links</h3>
-            <a href="#"> <i class="fas fa-arrow-right"></i> home </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> featured </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> arrivals </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> reviews </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> blogs </a>
+            <h3> روابط سريعة </h3>
+            <a href="#"> <i class="fas fa-arrow-right"></i> الرئيسية </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> الكتب المميزة </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> الكتب الجديدة </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> مراجعات</a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> مقالات </a>
         </div>
 
         <div class="box">
-            <h3>extra links</h3>
-            <a href="#"> <i class="fas fa-arrow-right"></i> account info </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> ordered items </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> privacy policy </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> payment method </a>
-            <a href="#"> <i class="fas fa-arrow-right"></i> our serivces </a>
+            <h3> روابط إضافية </h3>
+            <a href="#"> <i class="fas fa-arrow-right"></i> معلومات الحساب </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> عدد الطلبات </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> سياسة الخصوصية </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> طرق الدفع </a>
+            <a href="#"> <i class="fas fa-arrow-right"></i> خدماتنا </a>
         </div>
 
         <div class="box">
-            <h3>contact info</h3>
-            <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
-            <a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
-            <a href="#"> <i class="fas fa-envelope"></i> shaikhanas@gmail.com </a>
+            <h3> معلومات التواصل </h3>
+            <a href="#"> <i class="fas fa-phone"></i> +222-22299488 </a>
+            <a href="#"> <i class="fas fa-phone"></i> +222-31299488 </a>
+            <a href="#"> <i class="fas fa-envelope"></i> abdellahiabdat@gmail.com </a>
             <img src="image/worldmap.png" class="map" alt="">
         </div>
         
@@ -786,7 +784,7 @@
         <a href="#" class="fab fa-pinterest"></a>
     </div>
 
-    <div class="credit"> created by <span>mr. web designer</span> | all rights reserved! </div>
+    <div class="credit"> تم بواسطة <span> أحمد عبدات </span> | جميع الحقوق محفوظة </div>
 
 </section>
 
