--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <div class="icons">
         <div class="content">
             <h3> دفع آمن </h3>
-            <p> حماية مشفرة للعملاء </p>
+            <p> حماية مشفرة </p>
         </div>
         <i class="fas fa-lock"></i>
     </div>
