--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 <section class="newsletter">
 
     <form action="">
-        <h3> إشترك لتصلك إشعارات با كتبنا الجديدة </h3>
+        <h3> إشترك لتصلك إشعارات بكتبنا الجديدة </h3>
         <input type="email" name="" placeholder="أدخل بريدك الإلكتروني" id="" class="box">
         <input type="submit" value="إشترك الآن" class="btn">
     </form>
