--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="header-2">
         <nav class="navbar">
             <a href="#home">الرئيسية</a>
-            <a href="#featured">المميزات</a>
+            <a href="#featured">المميزة</a>
             <a href="#arrivals">الحديثة</a>
             <a href="#reviews">مراجعات</a>
             <a href="#blogs">مقالات</a>
